--- a/bottombar.css
+++ b/bottombar.css
@@ -7,6 +7,7 @@
     justify-content: space-between;
     align-items: end;
     padding: 8px;
+    margin-top: 100%;
 }
 
 
@@ -14,4 +15,5 @@
     color: #8f98a0;
     text-decoration: none;
     font-size: 11px;
+
 }
