--- a/topbar.css
+++ b/topbar.css
@@ -6,7 +6,9 @@ body {
 
 
 .container {
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 
@@ -277,4 +279,5 @@ padding-bottom: 2px;
         font-size: 20px;
         padding: 2px 4px;
     }
+
 }
