--- a/topbar.css
+++ b/topbar.css
@@ -6,8 +6,7 @@ body {
 
 
 .container {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     min-height: 100vh;
 }
 
@@ -280,4 +279,5 @@ padding-bottom: 2px;
     }
 
 }
+
 
