--- a/topbar.css
+++ b/topbar.css
@@ -6,7 +6,9 @@ body {
 
 
 .container {
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 
@@ -277,6 +279,7 @@ padding-bottom: 2px;
     }
 
 }
+
 
 
 
