--- a/topbar.css
+++ b/topbar.css
@@ -2,6 +2,7 @@ body {
     margin: 0; 
     background: #0b0e13; 
     font-family: Arial, sans-serif; 
+    height: 100%;
 }
 
 
@@ -10,7 +11,6 @@ body {
     flex-direction: column;
     min-height: 100vh;
 }
-
 
 .topbar {
 height: 72px;
@@ -171,6 +171,7 @@ padding-bottom: 2px;
     flex-direction: row;
     gap: 5px;
     align-items: top;
+    height: 100%;
 }
 
 
@@ -277,10 +278,4 @@ padding-bottom: 2px;
         font-size: 20px;
         padding: 2px 4px;
     }
-
 }
-
-
-
-
-
