--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
+body { 
+    margin: 0; 
+    background: #0b0e13; 
+    font-family: Arial, sans-serif; 
+    height: 100%;
+}
+
+
 .main {
     flex: 1;
     display: flex; 
