fix topbar on second site

--- a/css/steammiddleprofile.css
+++ b/css/steammiddleprofile.css
@@ -33,7 +33,7 @@
     padding-top: 10px;
 }
 
-.games{
+.games-benjamin{
     display: flex;
     flex-direction: row;
     background-color: rgba(10, 10, 10, 0.8);
