--- a/css/steamprofile.css
+++ b/css/steamprofile.css
@@ -1,18 +1,15 @@
 body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, sans-serif; 
     margin: 0;
+    height: 100%;
     background-image: url("https://shared.fastly.steamstatic.com/community_assets/images/items/874400/14e1a261b94ebe19eac8234a9c7e4abaae1084bb.jpg");
 }
 
 
-.topbar{
-    background-color: pink;
-    height: 72px;
-}
-
 .profilebackground{
     background-color: rgba(34, 33, 46, 0.9);
     height: 1600px;
+    min-width: 0px;
     width: 890px;
     margin-left: auto;
     margin-right: auto;
@@ -25,7 +22,7 @@ body{
     padding-top: 20px;
 }
 
-.profile-name{
+.profile-name-benjamin{
     color: white;
     font-size: 20px;
     padding-left: 50px;
