--- a/css/steamprofile.css
+++ b/css/steamprofile.css
@@ -9,6 +9,7 @@ body{
 .profilebackground{
     background-color: rgba(34, 33, 46, 0.9);
     height: 1600px;
+    min-width: 0px;
     width: 890px;
     margin-left: auto;
     margin-right: auto;
